# ESP32-S3-XIAO-ESPIDF

./: BUG_FIXES_PPP.md  CMakeLists.txt  DESIGN.md  README.md  SIM_MODEM_FSM.md  WIFI_NETWORK_FLOW.md  diagram.json  sdkconfig.defaults  wokwi.toml
Docs/: HARDWARE_BOM.md  MIGRATION_ANALYSIS.md  WIFI_NETWORK_FLOW.md
Docs/Audio Docs/: BACKEND_INTEGRATION.md  MIC_DRIVER_DESIGN.md  MIC_WORKFLOW.md  SPEAKER_DRIVER_DESIGN.md  SPEAKER_WORKFLOW.md  VOICE_ASSISTANT_WORKFLOW.md
main/: CMakeLists.txt  board_config.h  main.c  mic_driver.c  mic_driver.h  modem_driver.c  modem_driver.h  network_app.c  network_app.h  sim_modem.c  sim_modem.h  speaker_driver.c  speaker_driver.h  test_network.c  test_network.h  voice_assistant.c  voice_assistant.h  wifi_driver.c  wifi_driver.h
tools/audio_bridge/: audio_bridge.py  requirements.txt
